# rustyfan

./: .gitignore  Cargo.toml  README.md
etc/: config.toml.example
init.d/: rustyfan
src/: main.rs
