[package]
name = "rustyfan"
version = "1.0.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] } # Add serde
serde_json = "1.0"
ctrlc = "3.5"
toml = "1.0"
directories = "6.0"
nix = { version = "0.31", features = ["user"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
